Update index.html added YT and Twitter profiles

--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
     </div>
     <div class="divcontact">
         <p>Contact</p>
-        <a href="#"><img class="imgcontact" alt="Discord" src="images/discord.png">
         <a href="https://github.com/Jonee2"><img class="imgcontact" alt="Github"src="images/image.png">
-        <a href="#"><img class="imgcontact" alt="Twitter"src="images/twitter.png">
-        <a href="#"><img class="imgcontact" alt="Youtube"src="images/youtube.png">
+        <a href="https://twitter.com/Jonee1155"><img class="imgcontact" alt="Twitter"src="images/twitter.png">
+        <a href="https://www.youtube.com/channel/UC3K68YNpWHQ5RUcpN7bcqrg"><img class="imgcontact" alt="Youtube"src="images/youtube.png">
      </div>
      </div>
 </body>
