--- a/index.html
+++ b/index.html
@@ -8,18 +8,25 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <div class="title">
-    <h3>Web Development is my passion.</h3>
-    </div>
+    <nav class="navbar">
+        <h1>Welcome to my website</h1>
+    <h3>Web Development is my passion</h3>
+    <ul>
+        <li>About</li>
+        <li><a href="contact.html">Contact</li></a>
+        <li>Placeholder</li>
+    </ul>
+    </nav>
     <div class="gifdiv">
     <img src="images/1625884984743.gif" class="gif">
     </div>
     <div class="divcontact">
         <p>Contact</p>
-        <a href="https://github.com/Jonee2"><img class="imgcontact" alt="Github"src="images/image.png">
-        <a href="https://twitter.com/Jonee1155"><img class="imgcontact" alt="Twitter"src="images/twitter.png">
-        <a href="https://www.youtube.com/channel/UC3K68YNpWHQ5RUcpN7bcqrg"><img class="imgcontact" alt="Youtube"src="images/youtube.png">
+        <a href="https://github.com/Jonee2"><img class="imgcontact" alt="Github"src="images/image.png"></a>
+        <a href="https://twitter.com/Jonee1155"><img class="imgcontact" alt="Twitter"src="images/twitter.png"></a>
+        <a href="https://www.youtube.com/channel/UC3K68YNpWHQ5RUcpN7bcqrg"><img class="imgcontact" alt="Youtube"src="images/youtube.png"></a>
      </div>
      </div>
+     <footer class="footer">Todos direitos e esquerdos reservados</footer>
 </body>
 </html>
