--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar">
         <h1>Welcome to my website</h1>
-    <h3>Web Development is my passion</h3>
+    <h4>Web Development is my passion</h4>
     <ul>
         <li>About</li>
         <li><a href="contact.html">Contact</li></a>
@@ -18,15 +18,11 @@
     </ul>
     </nav>
     <div class="gifdiv">
-    <img src="images/1625884984743.gif" class="gif">
+    <img src="images/1625884984743.gif" class="gif">  
     </div>
-    <div class="divcontact">
-        <p>Contact</p>
-        <a href="https://github.com/Jonee2"><img class="imgcontact" alt="Github"src="images/image.png"></a>
-        <a href="https://twitter.com/Jonee1155"><img class="imgcontact" alt="Twitter"src="images/twitter.png"></a>
-        <a href="https://www.youtube.com/channel/UC3K68YNpWHQ5RUcpN7bcqrg"><img class="imgcontact" alt="Youtube"src="images/youtube.png"></a>
-     </div>
-     </div>
+    <p>Tecnologies used(for now)</p>
+    (html css) place holder 
+    
      <footer class="footer">Todos direitos e esquerdos reservados</footer>
 </body>
 </html>
