--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </ul>
     </nav>
     <div class="gifdiv">
-    <img src="images/1625884984743.gif" class="gif">  
+    <img alt="Placeholder"src="images/1625884984743.gif" class="gif">  
     </div>
     <p>Tecnologies used(for now)</p>
     (html css) place holder 
