changed gif z-index, updated projects

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <link rel="script" href="script.js">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
+<title>Portfolio</title>
 </head>
 <body>
     <nav class="navbar">
@@ -17,11 +20,15 @@
         <li>Placeholder</li>
     </ul>
     </nav>
+    <h2>Projetos</h2>
+    <a href="https://jonee2.github.io/Handcrafted-CSS-Mario/">CSS 8bit Mario</a> 
     <div class="gifdiv">
     <img alt="Placeholder"src="images/1625884984743.gif" class="gif">  
     </div>
+    <div class="divtecnologies">
     <p>Tecnologies used(for now)</p>
     (html css) place holder 
+    </div>
     <footer class="footer">Todos direitos e esquerdos reservados</footer>
 </body>
 </html>
