changed gif z-index, updated projects

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <img alt="Placeholder"src="images/1625884984743.gif" class="gif">  
     </div>
     <div class="divtecnologies">
-    <p>Tecnologies used(for now)</p>
+    <p>Tecnologies used</p>
     (html css) place holder 
     </div>
     <footer class="footer">Todos direitos e esquerdos reservados</footer>
