--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         <li>Placeholder</li>
     </ul>
     </nav>
+    <div class="projetos">
     <h2>Projetos</h2>
     <a href="https://jonee2.github.io/Handcrafted-CSS-Mario/">CSS 8bit Mario</a> 
-    <div class="gifdiv">
     <img alt="Placeholder"src="images/1625884984743.gif" class="gif">  
     </div>
     <div class="divtecnologies">
     <p>Tecnologies used</p>
-    (html css) place holder 
+    html css
     </div>
     <footer class="footer">Todos direitos e esquerdos reservados</footer>
 </body>
