--- a/index.html
+++ b/index.html
@@ -11,24 +11,30 @@
 <title>Portfolio</title>
 </head>
 <body>
-    <nav class="navbar">
-        <h1>Welcome to my website</h1>
-    <h4>Web Development is my passion</h4>
-    <ul>
-        <li>About</li>
-        <li><a href="contact.html">Contact</li></a>
-        <li>Placeholder</li>
-    </ul>
-    </nav>
-    <img alt="Placeholder"src="images/1625884984743.gif" class="gif">
-    <div class="projetos">
-    <h2>Projetos</h2>
-    <a href="https://jonee2.github.io/Handcrafted-CSS-Mario/">CSS 8bit Mario</a>   
+        <h1 class="main-title">Projetos</h1>
+    <div class="main">
+    <div class="mario card">
+        <a href="https://jonee2.github.io/Handcrafted-CSS-Mario/"><h2>CSS 8bit Art</h2></a>
+        <p>CSS 8 bit Art, handcrafted, no JS or any scripting.</p>
+        <img alt="mario" src="images/Screenshot from 2024-01-13 14-05-23.png">
+        <p></p>
+        </div>   
     </div>
-    <div class="divtecnologies">
-    <p>Tecnologies used</p>
-    html css
     </div>
-    <footer class="footer">Todos direitos e esquerdos reservados</footer>
+    <footer class="footer">
+        <ul class="divcontact">
+            <li></li><a href="https://github.com/Jonee2"><img class="imgcontact" alt="Github"src="images/image.png"></a></li>
+            <li></li><a href="https://twitter.com/Jonee1155"><img class="imgcontact" alt="Twitter"src="images/twitter.png"></a></li>
+            <li></li><a href="https://www.youtube.com/channel/UC3K68YNpWHQ5RUcpN7bcqrg">
+                <img class="imgcontact" alt="Youtube"src="images/youtube.png"></a></li>
+        </ul>
+        <p>Todos direitos e esquerdos reservados.</p>
+    </footer>
 </body>
 </html>
+    <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
+        ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
+        sunt in culpa qui officia deserunt mollit anim id est laborum. -->
