more clean design

--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
 <body>
         <h1 class="main-title">Projetos</h1>
     <div class="main">
-    <div class="mario card">
+    <div class="left card">
         <a href="https://jonee2.github.io/Handcrafted-CSS-Mario/"><h2>CSS 8bit Art</h2></a>
-        <p>CSS 8 bit Art, handcrafted, no JS or any scripting.</p>
+        <p>CSS 8 bit Art, handcrafted manipulating divs and background colors only, no JS or any scripting.</p>
         <img alt="mario" src="images/Screenshot from 2024-01-13 14-05-23.png">
         <p></p>
         </div>   
     </div>
     </div>
     <footer class="footer">
-        <ul class="divcontact">
-            <li></li><a href="https://github.com/Jonee2"><img class="imgcontact" alt="Github"src="images/image.png"></a></li>
-            <li></li><a href="https://twitter.com/Jonee1155"><img class="imgcontact" alt="Twitter"src="images/twitter.png"></a></li>
-            <li></li><a href="https://www.youtube.com/channel/UC3K68YNpWHQ5RUcpN7bcqrg">
-                <img class="imgcontact" alt="Youtube"src="images/youtube.png"></a></li>
+        <ul class="contactfooter">
+            <li><a href="https://github.com/Jonee2"><img class="icons" alt="Github"src="images/image.png"></a></li>
+            <li><a href="https://twitter.com/Jonee1155"><img class="icons" alt="Twitter"src="images/twitter.png"></a></li>
+            <li><a href="https://www.youtube.com/channel/UC3K68YNpWHQ5RUcpN7bcqrg">
+                <img class="icons" alt="Youtube"src="images/youtube.png"></a></li>
         </ul>
         <p>Todos direitos e esquerdos reservados.</p>
     </footer>
