--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="left card">
         <a href="https://jonee2.github.io/Handcrafted-CSS-8-bit-art/"><h2>CSS 8bit Art</h2></a>
         <p>CSS 8 bit Art, handcrafted manipulating divs and background colors only, no JS or any scripting.</p>
-        <img alt="mario" src="images/Screenshot from 2024-01-13 14-05-23.png">
+        <img alt="mario" src="images/dzWJ5Ju.png">
         <p></p>
         </div>   
     </div>
