added lawfirm landing page

--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
         <a href="https://jonee2.github.io/Handcrafted-CSS-8-bit-art/"><h2>CSS 8bit Art</h2></a>
         <p>CSS 8 bit Art, handcrafted manipulating divs and background colors only, no JS or any scripting.</p>
         <img alt="mario" src="images/dzWJ5Ju.png">
-        <p></p>
-        </div>   
+        </div>
+        <div class="left card">
+        <a href="https://jonee2.github.io/better-call-saul/"><h2>Lawfirm Landing page</h2></a>
+        <p>Lawfirm landing page website using bootstrap.</p>
+        <img alt="lawfirm" src="images/Screenshot from 2024-01-22 01-17-52.png">
+        </div>    
     </div>
     </div>
     <footer class="footer">
