added preview gif

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="left card">
         <a href="https://jonee2.github.io/better-call-saul/"><h2>Lawfirm Landing page</h2></a>
         <p>Lawfirm landing page website using bootstrap.</p>
-        <img alt="lawfirm" src="images/Screenshot from 2024-01-22 01-17-52.png">
+        <img alt="lawfirm" src="images/Screencast from 01-24-2024 10_11_32 AM.gif">
         </div>    
     </div>
     </div>
