--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 <title>Portfolio</title>
 </head>
 <body>
-        <h1 class="main-title">Projetos</h1>
+    <div class="header">
+    <h1> I'm Jhonne.</h1>
+    <h2 class="sub-title">A aspiring front-end dev.</h2>
+    </div>
+    <h1 class="main-title">Projetos</h1>
     <div class="main">
     <div class="left card">
         <a href="https://jonee2.github.io/Handcrafted-CSS-8-bit-art/"><h2>CSS 8bit Art</h2></a>
