--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <div class="header">
     <h1> I'm Jhonne.</h1>
     <h2 class="sub-title">A aspiring front-end dev.</h2>
+    <img src="images/code-slash-svgrepo-com.svg" alt="codebracket">
+    </div>
+    <div class="aboutme">
+        <h1>About me</h1>
+        <img src="images/">
+        <p>Hello, i'm a aspiring front-end webdev and my focus is designing user-friendly web-applications</p>
     </div>
     <h1 class="main-title">Projetos</h1>
     <div class="main">
