added tech stack and fixed formmatng

--- a/index.html
+++ b/index.html
@@ -13,13 +13,26 @@
 <body>
     <div class="header">
     <h1> I'm Jhonne.</h1>
-    <h2 class="sub-title">A aspiring front-end dev.</h2>
+    <h2 class="sub-title"><span>A aspiring front-end dev.</span></h2>
     <img src="images/code-slash-svgrepo-com.svg" alt="codebracket">
     </div>
-    <div class="aboutme">
-        <h1>About me</h1>
-        <img src="images/">
+    <div class="aboutme header">
+        <h1><span>About me</span></h1>
+        <img src="images/1625884984743.gif" alt="placeholder">
         <p>Hello, i'm a aspiring front-end webdev and my focus is designing user-friendly web-applications</p>
+    </div>
+    <div class="skills header">
+        <h1 class="sub-title">my skills</h1>
+        <p>UI/UX-Designing</p>
+        </div>
+        <div class="header">
+        <h1 class="sub-title">Tech Stack</h1>
+        <p>HTML/CSS</p>
+        <p>Bootstrap/SASS</p>
+        <p>Git/Github</p>
+        <p>Visual Studio Code</p>
+        <p>Linux/Shell bash</p>
+
     </div>
     <h1 class="main-title">Projetos</h1>
     <div class="main">
