added media query

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="header">
         <h1 class="sub-title">Tech Stack</h1>
         <p>HTML/CSS</p>
-        <p>Bootstrap/SASS</p>
+        <p>Bootstrap</p>
         <p>Git/Github</p>
         <p>Visual Studio Code</p>
         <p>Linux/Shell bash</p>
@@ -45,7 +45,12 @@
         <a href="https://jonee2.github.io/better-call-saul/"><h2>Lawfirm Landing page</h2></a>
         <p>Lawfirm landing page website using bootstrap.</p>
         <img alt="lawfirm" src="images/Screencast from 01-24-2024 10_11_32 AM.gif">
-        </div>    
+        </div>
+        <div class="left card">
+        <a href="https://jonee2.github.io/rock-paper-scissor/"><h2>Rock Paper Scissor Game.</h2></a>
+        <p>Rock Paper Scissor Game made in Pure Javascript.</p>
+        <img alt="RPS" src="images/Screencastfrom02-01-2024090133AM-ezgif.com-video-to-gif-converter.gif">
+        </div>        
     </div>
     </div>
     <footer class="footer">
