added hover properties

--- a/index.html
+++ b/index.html
@@ -2,19 +2,18 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="styles.css">  
-    <link rel="script" href="script.js">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
-<title>Portfolio</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
+    <title>Portfolio</title>
 </head>
 <body>
     <div class="header">
-    <h1> I'm Jhonne.</h1>
-    <h2 class="sub-title"><span>A aspiring front-end dev.</span></h2>
-    <img src="images/code-slash-svgrepo-com.svg" alt="codebracket">
+        <h1> I'm Jhonne.</h1>
+        <h2 class="sub-title"><span>A aspiring front-end dev.</span></h2>
+        <img src="images/code-slash-svgrepo-com.svg" alt="codebracket">
     </div>
     <div class="aboutme header">
         <h1><span>About me</span></h1>
@@ -24,49 +23,50 @@
     <div class="skills header">
         <h1 class="sub-title">my skills</h1>
         <p>UI/UX-Designing</p>
-        </div>
-        <div class="header">
+    </div>
+    <div class="header">
         <h1 class="sub-title">Tech Stack</h1>
         <p>HTML/CSS</p>
         <p>Bootstrap</p>
         <p>Git/Github</p>
         <p>Visual Studio Code</p>
         <p>Linux/Shell bash</p>
-
+        
     </div>
     <h1 class="main-title">Projetos</h1>
     <div class="main">
-    <div class="left card">
-        <a href="https://jonee2.github.io/Handcrafted-CSS-8-bit-art/"><h2>CSS 8bit Art</h2></a>
-        <p>CSS 8 bit Art, handcrafted manipulating divs and background colors only, no JS or any scripting.</p>
-        <img alt="mario" src="images/dzWJ5Ju.png">
+        <div class="left card">
+            <a href="https://jonee2.github.io/Handcrafted-CSS-8-bit-art/"><h2>CSS 8bit Art</h2></a>
+            <p>CSS 8 bit Art, handcrafted manipulating divs and background colors only, no JS or any scripting.</p>
+            <img alt="mario" src="images/dzWJ5Ju.png">
         </div>
         <div class="left card">
-        <a href="https://jonee2.github.io/better-call-saul/"><h2>Lawfirm Landing page</h2></a>
-        <p>Lawfirm landing page website using bootstrap.</p>
-        <img alt="lawfirm" src="images/Screencast from 01-24-2024 10_11_32 AM.gif">
+            <a href="https://jonee2.github.io/better-call-saul/"><h2>Lawfirm Landing page</h2></a>
+            <p>Lawfirm landing page website using bootstrap.</p>
+            <img class="lawgif" alt="lawfirm" src="images/Screenshot from 2024-01-22 01-17-52.png">
         </div>
         <div class="left card">
-        <a href="https://jonee2.github.io/rock-paper-scissor/"><h2>Rock Paper Scissor Game.</h2></a>
-        <p>Rock Paper Scissor Game made in Pure Javascript.</p>
-        <img alt="RPS" src="images/Screencastfrom02-01-2024090133AM-ezgif.com-video-to-gif-converter.gif">
+            <a href="https://jonee2.github.io/rock-paper-scissor/"><h2>Rock Paper Scissor Game.</h2></a>
+            <p>Rock Paper Scissor Game made in Pure Javascript.</p>
+            <img class="rpggif" alt="RPS" src="images/Screenshot from 2024-02-01 10-50-10.png">
         </div>        
     </div>
-    </div>
-    <footer class="footer">
-        <ul class="contactfooter">
-            <li><a href="https://github.com/Jonee2"><img class="icons" alt="Github"src="images/image.png"></a></li>
-            <li><a href="https://twitter.com/Jonee1155"><img class="icons" alt="Twitter"src="images/twitter.png"></a></li>
-            <li><a href="https://www.youtube.com/channel/UC3K68YNpWHQ5RUcpN7bcqrg">
-                <img class="icons" alt="Youtube"src="images/youtube.png"></a></li>
+</div>
+<footer class="footer">
+    <ul class="contactfooter">
+        <li><a href="https://github.com/Jonee2"><img class="icons" alt="Github"src="images/image.png"></a></li>
+        <li><a href="https://twitter.com/Jonee1155"><img class="icons" alt="Twitter"src="images/twitter.png"></a></li>
+        <li><a href="https://www.youtube.com/channel/UC3K68YNpWHQ5RUcpN7bcqrg">
+            <img class="icons" alt="Youtube"src="images/youtube.png"></a></li>
         </ul>
         <p>Todos direitos e esquerdos reservados.</p>
     </footer>
+    <link rel="script" href="script.js">
 </body>
 </html>
-    <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
+<!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
         ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
         velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
         sunt in culpa qui officia deserunt mollit anim id est laborum. -->
