--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="left card">
             <a href="https://jonee2.github.io/rock-paper-scissor/"><h2>Rock Paper Scissor Game.</h2></a>
             <p>Rock Paper Scissor Game made in Pure Javascript.</p>
-            <img class="rpggif" alt="RPS" src="images/Screenshot from 2024-02-01 10-50-10.png">
+            <img class="rpsgif" alt="RPS" src="images/Screenshot from 2024-02-01 10-50-10.png">
         </div>        
     </div>
 </div>
