--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
     <link rel="stylesheet" href="styles.css">  
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <title>Portfolio</title>
 </head>
 <body>
@@ -43,13 +40,18 @@
         <div class="left card">
             <a href="https://jonee2.github.io/better-call-saul/"><h2>Lawfirm Landing page</h2></a>
             <p>Lawfirm landing page website using bootstrap.</p>
-            <img class="lawgif" alt="lawfirm" src="images/Screenshot from 2024-01-22 01-17-52.png">
+            <img class="lawgif" alt="lawfirm" src="images/Screencast from 01-24-2024 10_11_32 AM.gif">
         </div>
         <div class="left card">
             <a href="https://jonee2.github.io/rock-paper-scissor/"><h2>Rock Paper Scissor Game.</h2></a>
             <p>Rock Paper Scissor Game made in Pure Javascript.</p>
-            <img class="rpsgif" alt="RPS" src="images/Screenshot from 2024-02-01 10-50-10.png">
-        </div>        
+            <img class="rpsgif" alt="RPS" src="images/Screencastfrom02-01-2024090133AM-ezgif.com-video-to-gif-converter.gif">
+        </div> 
+        <div class="left card">
+            <a href="https://jonee2.github.io/JScalculator/"><h2>Calculator</h2></a>
+            <p>Calculator written in TS</p>
+            <img class="calcgif" alt="RPS" src="images/ezgif-8-7272f74475.gif">
+        </div>       
     </div>
 </div>
 <footer class="footer">
