added typer effect

--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <script defer src="script.js"></script>
 </head>
 <body>
     <div class="header">
         <h1> I'm Jhonne.</h1>
-        <h2 class="sub-title"><span>A aspiring front-end dev.</span></h2>
+        <p class="typing sub-title para"></p>
         <img src="images/code-slash-svgrepo-com.svg" alt="codebracket">
     </div>
     <div class="aboutme header">
-        <h1><span>About me</span></h1>
+        <p class="typing para sub-title">About Me</p>
         <p>Hello, i'm a aspiring front-end webdev and my focus is designing user-friendly web-applications</p>
     </div>
     <div class="skills header">
@@ -57,12 +58,6 @@
         </ul>
         <p>Todos direitos e esquerdos reservados.</p>
     </footer>
-    <link rel="script" href="script.js">
+
 </body>
 </html>
-<!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
-        ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
-        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
-        sunt in culpa qui officia deserunt mollit anim id est laborum. -->
