--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="header">
-        <h1> I'm Jhonne.</h1>
+        <h1>I'm Jhonne</h1>
         <p class="typing sub-title para"></p>
         <img src="images/code-slash-svgrepo-com.svg" alt="codebracket">
     </div>
