added two projects

--- a/index.html
+++ b/index.html
@@ -46,7 +46,17 @@
             <a href="https://jonee2.github.io/JScalculator/"><h2>Calculator</h2></a>
             <p>Calculator written in TS</p>
             <img class="calcgif" alt="RPS" src="images/ezgif-8-7272f74475.gif">
-        </div>       
+        </div>
+        <div class="left card">
+            <a href="https://jonee2.github.io/FEM-pricingTable/"><h2>Pricing Table</h2></a>
+            <p>Basic pricing table/p>
+            <img alt="pricingtable" src="images/Screenshot from 2024-02-25 03-28-11.png">
+        </div>
+        <div class="left card">
+            <a href="https://jonee2.github.io/FEM-sign-up-form/"><h2>Login form</h2></a>
+            <p>Basic sign-up form</p>
+            <img alt="loginform" src="images/Screenshot from 2024-02-25 03-28-24.png">
+        </div>            
     </div>
 </div>
 <footer class="footer">
