--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
         <div class="left card">
             <a href="https://jonee2.github.io/FEM-pricingTable/"><h2>Pricing Table</h2></a>
-            <p>Basic pricing table/p>
+            <p>Basic pricing table</p>
             <img alt="pricingtable" src="images/Screenshot from 2024-02-25 03-28-11.png">
         </div>
         <div class="left card">
