--- a/index.html
+++ b/index.html
@@ -30,33 +30,41 @@
         <p>Linux/Shell bash</p>
         
     </div>
-    <h1 class="main-title">Projetos</h1>
+    <p class="main-title">Projetos</p>
     <div class="main">
         <div class="left card">
-            <a href="https://jonee2.github.io/better-call-saul/"><h2>Lawfirm Landing page</h2></a>
+            <p class="sub-title para">Lawfirm Landing page</p>
             <p>Lawfirm landing page website using bootstrap.</p>
-            <img class="lawgif" alt="lawfirm" src="images/Screencast from 01-24-2024 10_11_32 AM.gif">
+            <a href="https://jonee2.github.io/better-call-saul/"><img class="lawgif" alt="lawfirm" src="images/Screencast from 01-24-2024 10_11_32 AM.gif"></a>
         </div>
         <div class="left card">
-            <a href="https://jonee2.github.io/rock-paper-scissor/"><h2>Rock Paper Scissor Game.</h2></a>
+            <p class="sub-title para">Rock Paper Scissor Game.</p>
             <p>Rock Paper Scissor Game made in Pure Javascript.</p>
-            <img class="rpsgif" alt="RPS" src="images/Screencastfrom02-01-2024090133AM-ezgif.com-video-to-gif-converter.gif">
+            <a href="https://jonee2.github.io/rock-paper-scissor/"><img class="rpsgif" alt="RPS" src="images/Screencastfrom02-01-2024090133AM-ezgif.com-video-to-gif-converter.gif"></a>
         </div> 
         <div class="left card">
-            <a href="https://jonee2.github.io/JScalculator/"><h2>Calculator</h2></a>
+            <p class="sub-title para">Calculator</p>
             <p>Calculator written in TS</p>
-            <img class="calcgif" alt="RPS" src="images/ezgif-8-7272f74475.gif">
+            <a href="https://jonee2.github.io/JScalculator/"><img class="calcgif" alt="RPS" src="images/ezgif-8-7272f74475.gif"></a>
         </div>
         <div class="left card">
-            <a href="https://jonee2.github.io/FEM-pricingTable/"><h2>Pricing Table</h2></a>
+            <p class="sub-title para">Pricing Table</p>
             <p>Basic pricing table</p>
-            <img alt="pricingtable" src="images/Screenshot from 2024-02-25 03-28-11.png">
+            <a href="https://jonee2.github.io/FEM-pricingTable/"><img alt="pricingtable" src="images/Screenshot from 2024-02-25 03-28-11.png"></a>
         </div>
         <div class="left card">
-            <a href="https://jonee2.github.io/FEM-sign-up-form/"><h2>Login form</h2></a>
+            <a class="sub-title para" href="https://jonee2.github.io/FEM-sign-up-form/"><p class="sub-title para">Login form</p></a>
             <p>Basic sign-up form</p>
             <img alt="loginform" src="images/Screenshot from 2024-02-25 03-28-24.png">
-        </div>            
+        </div>
+        <div class="left card">
+            <p class="sub-title para">Breakout game</p>
+            <p>Breakout Game in canvas</p>
+            <canvas id="myCanvas" width="480" height="320">
+         
+            </canvas>
+
+        </div>                        
     </div>
 </div>
 <footer class="footer">
