--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
             <a href="https://jonee2.github.io/better-call-saul/"><img class="lawgif" alt="lawfirm" src="images/Screencast from 01-24-2024 10_11_32 AM.gif"></a>
         </div>
         <div class="left card">
+            <p class="sub-title para">Breakout game</p>
+            <p>Breakout Game in canvas</p>
+            <canvas id="myCanvas" width="480" height="320">
+         
+            </canvas>
+            <p>Use arrows to move the paddle</p>
+            <button id="canvasbtn">Start</button>
+        </div>                        
+        <div class="left card">
             <p class="sub-title para">Rock Paper Scissor Game.</p>
             <p>Rock Paper Scissor Game made in Pure Javascript.</p>
             <a href="https://jonee2.github.io/rock-paper-scissor/"><img class="rpsgif" alt="RPS" src="images/Screencastfrom02-01-2024090133AM-ezgif.com-video-to-gif-converter.gif"></a>
@@ -53,18 +62,10 @@
             <a href="https://jonee2.github.io/FEM-pricingTable/"><img alt="pricingtable" src="images/Screenshot from 2024-02-25 03-28-11.png"></a>
         </div>
         <div class="left card">
-            <a class="sub-title para" href="https://jonee2.github.io/FEM-sign-up-form/"><p class="sub-title para">Login form</p></a>
+            <p class="sub-title para">Login form</p>
             <p>Basic sign-up form</p>
-            <img alt="loginform" src="images/Screenshot from 2024-02-25 03-28-24.png">
+            <a class="sub-title para" href="https://jonee2.github.io/FEM-sign-up-form/"><img alt="loginform" src="images/Screenshot from 2024-02-25 03-28-24.png"></a>
         </div>
-        <div class="left card">
-            <p class="sub-title para">Breakout game</p>
-            <p>Breakout Game in canvas</p>
-            <canvas id="myCanvas" width="480" height="320">
-         
-            </canvas>
-
-        </div>                        
     </div>
 </div>
 <footer class="footer">
@@ -72,7 +73,7 @@
         <li><a href="https://github.com/Jonee2"><img class="icons" alt="Github"src="images/image.png"></a></li>
         <li><a href="https://twitter.com/Jonee1155"><img class="icons" alt="Twitter"src="images/twitter.png"></a></li>
         <li><a href="https://www.youtube.com/channel/UC3K68YNpWHQ5RUcpN7bcqrg">
-            <img class="icons" alt="Youtube"src="images/youtube.png"></a></li>
+        <img class="icons" alt="Youtube"src="images/youtube.png"></a></li>
         </ul>
         <p>Todos direitos e esquerdos reservados.</p>
     </footer>
