changed button text

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
          
             </canvas>
             <p>Use arrows to move the paddle</p>
-            <button id="canvasbtn">Start</button>
+            <button id="canvasbtn">Start the game</button>
         </div>                        
         <div class="left card">
             <p class="sub-title para">Rock Paper Scissor Game.</p>
