--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <div class="aboutme header">
         <p class="typing para sub-title">About Me</p>
-        <p>Hello, i'm a aspiring front-end webdev and my focus is designing user-friendly web-applications</p>
+        <p>Hello, i'm a aspiring webdev and my focus is designing user-friendly web-applications</p>
     </div>
     <div class="skills header">
         <h1 class="sub-title">my skills</h1>
