--- a/index.html
+++ b/index.html
@@ -1,78 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="styles.css">  
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
     <script defer src="script.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <div class="header">
-        <h1>I'm Jhonne</h1>
-        <p class="typing sub-title para"></p>
-        <img src="images/code-slash-svgrepo-com.svg" alt="codebracket">
+      <h1>I'm Jhonne</h1>
+      <p class="typing sub-title para"></p>
+      <img src="images/code-slash-svgrepo-com.svg" alt="codebracket" />
     </div>
     <div class="aboutme header">
-        <p class="typing para sub-title">About Me</p>
-        <p>Hello, i'm a aspiring webdev and my focus is designing user-friendly web-applications</p>
+      <p class="typing para sub-title">About Me</p>
+      <p>
+        Hello, i'm a aspiring webdev and my focus is designing user-friendly
+        web-applications
+      </p>
     </div>
     <div class="skills header">
-        <h1 class="sub-title">my skills</h1>
-        <p>UI/UX-Designing</p>
+      <h1 class="sub-title">my skills</h1>
+      <p>UI/UX-Designing</p>
     </div>
     <div class="header">
-        <h1 class="sub-title">Tech Stack</h1>
-        <p>HTML/CSS</p>
-        <p>Bootstrap</p>
-        <p>Git/Github</p>
-        <p>Visual Studio Code</p>
-        <p>Linux/Shell bash</p>
-        
+      <h1 class="sub-title">Tech Stack</h1>
+      <p>HTML/CSS</p>
+      <p>Bootstrap</p>
+      <p>Git/Github</p>
+      <p>Visual Studio Code</p>
+      <p>Linux/Shell bash</p>
     </div>
     <p class="main-title">Projetos</p>
     <div class="main">
-        <div class="left card">
-            <p class="sub-title para">Lawfirm Landing page</p>
-            <p>Lawfirm landing page website using bootstrap.</p>
-            <a href="https://jonee2.github.io/better-call-saul/"><img class="lawgif" alt="lawfirm" src="images/Screencast from 01-24-2024 10_11_32 AM.gif"></a>
-        </div>
-        <div class="left card">
-            <p class="sub-title para">Breakout game</p>
-            <p>Breakout Game in canvas</p>
-            <button id="canvasbtn">Start the game</button>
-            <canvas id="myCanvas" width="480" height="320">
-         
-            </canvas>
-            <p>Use arrows to move the paddle</p>
-        </div>                        
-        <div class="left card">
-            <p class="sub-title para">Rock Paper Scissor Game.</p>
-            <p>Rock Paper Scissor Game made in Pure Javascript.</p>
-            <a href="https://jonee2.github.io/rock-paper-scissor/"><img class="rpsgif" alt="RPS" src="images/Screencastfrom02-01-2024090133AM-ezgif.com-video-to-gif-converter.gif"></a>
-        </div> 
-        <div class="left card">
-            <p class="sub-title para">Calculator</p>
-            <p>Calculator written in TS</p>
-            <a href="https://jonee2.github.io/JScalculator/"><img class="calcgif" alt="RPS" src="images/ezgif-8-7272f74475.gif"></a>
-        </div>
-        <div class="left card">
-            <p class="sub-title para">Pricing Table</p>
-            <p>Basic pricing table</p>
-            <a href="https://jonee2.github.io/FEM-pricingTable/"><img alt="pricingtable" src="images/Screenshot from 2024-02-25 03-28-11.png"></a>
-        </div>
-        <div class="left card">
-            <p class="sub-title para">Login form</p>
-            <p>Basic sign-up form</p>
-            <a class="sub-title para" href="https://jonee2.github.io/FEM-sign-up-form/"><img alt="loginform" src="images/Screenshot from 2024-02-25 03-28-24.png"></a>
-        </div>
+      <div class="card">
+        <p class="sub-title para">Lawfirm Landing page</p>
+        <p>Lawfirm landing page website using bootstrap.</p>
+        <a href="https://jonee2.github.io/better-call-saul/"
+          ><img
+            class="lawgif"
+            alt="lawfirm"
+            src="images/Screencast from 01-24-2024 10_11_32 AM.gif"
+        /></a>
+      </div>
+      <div class="card">
+        <p class="sub-title para">Breakout game</p>
+        <p>Breakout Game in canvas</p>
+        <button id="canvasbtn">Start the game</button>
+        <canvas id="myCanvas" width="480" height="320"> </canvas>
+        <p>Use arrows to move the paddle</p>
+      </div>
+      <div class="card">
+        <p class="sub-title para">Rock Paper Scissor Game.</p>
+        <p>Rock Paper Scissor Game made in Pure Javascript.</p>
+        <a href="https://jonee2.github.io/rock-paper-scissor/"
+          ><img
+            class="rpsgif"
+            alt="RPS"
+            src="images/Screencastfrom02-01-2024090133AM-ezgif.com-video-to-gif-converter.gif"
+        /></a>
+      </div>
+      <div class="card">
+        <p class="sub-title para">Calculator</p>
+        <p>Calculator written in TS</p>
+        <a href="https://jonee2.github.io/JScalculator/"
+          ><img class="calcgif" alt="RPS" src="images/ezgif-8-7272f74475.gif"
+        /></a>
+      </div>
+      <div class="left card">
+        <p class="sub-title para">Pricing Table</p>
+        <p>Basic pricing table</p>
+        <a href="https://jonee2.github.io/FEM-pricingTable/"
+          ><img
+            alt="pricingtable"
+            src="images/Screenshot from 2024-02-25 03-28-11.png"
+        /></a>
+      </div>
+      <div class="left card">
+        <p class="sub-title para">Login form</p>
+        <p>Basic sign-up form</p>
+        <a
+          class="sub-title para"
+          href="https://jonee2.github.io/FEM-sign-up-form/"
+          ><img
+            alt="loginform"
+            src="images/Screenshot from 2024-02-25 03-28-24.png"
+        /></a>
+      </div>
     </div>
-</div>
-<footer class="footer">
-    <ul class="contactfooter">
-        <li><a href="https://github.com/Jonee2"><img class="icons" alt="Github"src="images/image.png"></a></li>
-        </ul>
+    <footer class="footer">
+      <ul class="contactfooter">
+        <li>
+          <a href="https://github.com/Jonee2"
+            ><img class="icons" alt="Github" src="images/image.png"
+          /></a>
+        </li>
+      </ul>
     </footer>
-
-</body>
+  </body>
 </html>
