--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
         /></a>
       </div>
       <div class="left card">
-        <p class="sub-title para">Login form</p>
-        <p>Basic sign-up form</p>
+        <p class="sub-title para">Library in JS</p>
+        <p>Library made in JS, you can add books, remove it and mark it as read</p>
         <a
           class="sub-title para"
-          href="https://jonee2.github.io/FEM-sign-up-form/"
+          href="https://jonee2.github.io/libraryJS/"
           ><img
             alt="loginform"
-            src="images/Screenshot from 2024-02-25 03-28-24.png"
+            src="images/Screenshot from 2024-03-21 23-41-43.png"
         /></a>
       </div>
     </div>
