--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
       </div>
       <div class="left card">
         <p class="sub-title para">Library in JS</p>
-        <p>Library made in JS, you can add books, remove it and mark it as read</p>
-        <a
-          class="sub-title para"
-          href="https://jonee2.github.io/libraryJS/"
+        <p>
+          Library made in JS, you can add books, remove it and mark it as read
+        </p>
+        <a class="sub-title para" href="https://jonee2.github.io/libraryJS/"
           ><img
             alt="loginform"
             src="images/Screenshot from 2024-03-21 23-41-43.png"
