--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
         <p>
           Library made in JS, you can add books, remove it and mark it as read
         </p>
-        <a class="sub-title para" href="https://jonee2.github.io/libraryJS/"
+        <a href="https://jonee2.github.io/libraryJS/"
           ><img
             alt="loginform"
-            src="images/Screenshot from 2024-03-21 23-41-43.png"
+            src="images/Screenshot from 2024-03-22 19-42-15.png"
         /></a>
       </div>
     </div>
