added more project grid details

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="main">
       <div class="card">
         <p class="sub-title para">Lawfirm Landing page</p>
-        <p>Lawfirm landing page website using bootstrap.</p>
+        <p class="sub-title">Lawfirm landing page website using bootstrap.</p>
         <a href="https://jonee2.github.io/better-call-saul/"
           ><img
             class="lawgif"
@@ -46,14 +46,16 @@
       </div>
       <div class="card">
         <p class="sub-title para">Breakout game</p>
-        <p>Breakout Game in canvas</p>
+        <p class="sub-title">Breakout Game in canvas</p>
         <button id="canvasbtn">Start the game</button>
         <canvas id="myCanvas" width="480" height="320"> </canvas>
-        <p>Use arrows to move the paddle</p>
+        <p class="sub-title">Use arrows to move the paddle</p>
       </div>
       <div class="card">
         <p class="sub-title para">Rock Paper Scissor Game.</p>
-        <p>Rock Paper Scissor Game made in Pure Javascript.</p>
+        <p class="sub-title">
+          Rock Paper Scissor Game made in Pure Javascript.
+        </p>
         <a href="https://jonee2.github.io/rock-paper-scissor/"
           ><img
             class="rpsgif"
@@ -63,23 +65,23 @@
       </div>
       <div class="card">
         <p class="sub-title para">Calculator</p>
-        <p>Calculator written in TS</p>
+        <p class="sub-title">Calculator written in TS</p>
         <a href="https://jonee2.github.io/JScalculator/"
           ><img class="calcgif" alt="RPS" src="images/ezgif-8-7272f74475.gif"
         /></a>
       </div>
-      <div class="left card">
+      <div class="card">
         <p class="sub-title para">Pricing Table</p>
-        <p>Basic pricing table</p>
+        <p class="sub-title">Basic pricing table</p>
         <a href="https://jonee2.github.io/FEM-pricingTable/"
           ><img
             alt="pricingtable"
             src="images/Screenshot from 2024-02-25 03-28-11.png"
         /></a>
       </div>
-      <div class="left card">
+      <div class="card">
         <p class="sub-title para">Library in JS</p>
-        <p>
+        <p class="sub-title">
           Library made in JS, you can add books, remove it and mark it as read
         </p>
         <a href="https://jonee2.github.io/libraryJS/"
