--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <p>Git/Github</p>
         <p>Visual Studio Code</p>
         <p>Linux/Shell bash</p>
+        <p class="main-title">Projetos</p>
       </div>
-      <p class="main-title">Projetos</p>
       <div class="main">
         <div class="card">
           <p class="sub-title para">Lawfirm Landing page</p>
@@ -59,7 +59,6 @@
           </p>
           <a href="https://jonee2.github.io/rock-paper-scissor/"
             ><img
-              class="rpsgif"
               alt="RPS"
               src="images/Screencastfrom02-01-2024090133AM-ezgif.com-video-to-gif-converter.gif"
           /></a>
@@ -68,7 +67,7 @@
           <p class="sub-title para">Calculator</p>
           <p class="sub-title">Calculator written in TS</p>
           <a href="https://jonee2.github.io/JScalculator/"
-            ><img class="calcgif" alt="RPS" src="images/ezgif-8-7272f74475.gif"
+            ><img alt="RPS" src="images/ezgif-8-7272f74475.gif"
           /></a>
         </div>
         <div class="card">
