--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         <p class="typing sub-title para-black"></p>
         <img src="images/code-slash-svgrepo-com.svg" alt="codebracket" />
       </div>
-      <div class="aboutme header">
+      <div class="header">
         <p class="para-black sub-title">About Me</p>
         <p>
           Hello, i'm a aspiring webdev and my focus is designing user-friendly
           web-applications
         </p>
       </div>
-      <div class="skills header">
+      <div class="header">
         <h1 class="sub-title">my skills</h1>
         <p>UI/UX-Designing</p>
       </div>
@@ -82,7 +82,8 @@
         <div class="card">
           <p class="sub-title para">Library in JS</p>
           <p class="sub-title">
-            Library made in JS, you can add books, remove it and mark it as read
+            Book library made in JS, you can add books, remove it and mark it as
+            read
           </p>
           <a href="https://jonee2.github.io/libraryJS/"
             ><img
