changes grid styles

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         </p>
       </div>
       <div class="header">
-        <h1 class="sub-title">my skills</h1>
+        <h1 class="sub-title-black">my skills</h1>
         <p>UI/UX-Designing</p>
       </div>
       <div class="header">
-        <h1 class="sub-title">Tech Stack</h1>
+        <h1 class="sub-title-black">Tech Stack</h1>
         <p>HTML/CSS</p>
         <p>Javascript</p>
         <p>Git/Github</p>
