set up diagonal div

--- a/index.html
+++ b/index.html
@@ -9,32 +9,32 @@
   </head>
   <body>
     <main>
-      <div class="header">
+      <section class="header">
         <h1>I'm Jhonne</h1>
         <p class="typing sub-title para-black"></p>
         <img src="images/code-slash-svgrepo-com.svg" alt="codebracket" />
-      </div>
-      <div class="header">
+      </section>
+      <section class="header">
         <p class="para-black sub-title">About Me</p>
         <p>
           Hello, i'm a aspiring webdev and my focus is designing user-friendly
           web-applications
         </p>
-      </div>
-      <div class="header">
+      </section>
+      <section class="header">
         <h1 class="sub-title-black">my skills</h1>
         <p>UI/UX-Designing</p>
-      </div>
-      <div class="header">
-        <h1 class="sub-title-black">Tech Stack</h1>
+      </section>
+      <section class="header-black">
+        <h1 class="sub-title">Tech Stack</h1>
         <p>HTML/CSS</p>
         <p>Javascript</p>
         <p>Git/Github</p>
         <p>Visual Studio Code</p>
         <p>Linux/Shell bash</p>
-        <p class="main-title">Projetos</p>
-      </div>
-      <div class="main">
+      </section>
+      <p class="main-title">Projetos</p>
+      <section class="main">
         <div class="card">
           <p class="sub-title para">Lawfirm Landing page</p>
           <p class="sub-title">Lawfirm landing page website using bootstrap.</p>
@@ -91,7 +91,7 @@
               src="images/Screenshot from 2024-03-22 19-42-15.png"
           /></a>
         </div>
-      </div>
+      </section>
     </main>
     <footer class="footer">
       <ul class="contactfooter">
