--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h1 class="sub-title-black">my skills</h1>
         <p>UI/UX-Designing</p>
       </section>
-      <section class="header-black">
+      <section class="header-black-tilted">
         <h1 class="sub-title">Tech Stack</h1>
         <p>HTML/CSS</p>
         <p>Javascript</p>
