fixed media query

--- a/index.html
+++ b/index.html
@@ -24,16 +24,18 @@
       <section class="header">
         <h1 class="sub-title-black">my skills</h1>
         <p>UI/UX-Designing</p>
+        <p>Linux/Shell bash</p>
+        <p>Git/Github</p>
       </section>
       <section class="header-black-tilted">
         <h1 class="sub-title">Tech Stack</h1>
         <p>HTML/CSS</p>
         <p>Javascript</p>
-        <p>Git/Github</p>
         <p>Visual Studio Code</p>
-        <p>Linux/Shell bash</p>
       </section>
+      <div class="header">
       <p class="main-title">Projetos</p>
+      </div>
       <section class="main">
         <div class="card">
           <p class="sub-title para">Lawfirm Landing page</p>
