improved typer effect

--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
       <section class="header-black-tilted">
         <h1 class="sub-title">Tech Stack</h1>
         <p>HTML/CSS</p>
+        <p>Tailwind</p>
         <p>Javascript</p>
         <p>Visual Studio Code</p>
       </section>
       <div class="header">
-      <p class="main-title">Projetos</p>
+        <p class="main-title">Projetos</p>
       </div>
       <section class="main">
         <div class="card">
