--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="card">
           <p class="sub-title para">Lawfirm Landing page</p>
           <p class="sub-title">Lawfirm landing page website using bootstrap.</p>
-          <a href="https://jonee2.github.io/better-call-saul/"
+          <a href="https://jhonneg.github.io/better-call-saul/"
             ><img
               class="lawgif"
               alt="lawfirm"
@@ -60,7 +60,7 @@
           <p class="sub-title">
             Rock Paper Scissor Game made in Pure Javascript.
           </p>
-          <a href="https://jonee2.github.io/rock-paper-scissor/"
+          <a href="https://jhonneg.github.io/rock-paper-scissor/"
             ><img
               alt="RPS"
               src="images/Screencastfrom02-01-2024090133AM-ezgif.com-video-to-gif-converter.gif"
@@ -69,14 +69,14 @@
         <div class="card">
           <p class="sub-title para">Calculator</p>
           <p class="sub-title">Calculator written in TS</p>
-          <a href="https://jonee2.github.io/JScalculator/"
+          <a href="https://jhonneg.github.io/JScalculator/"
             ><img alt="RPS" src="images/ezgif-8-7272f74475.gif"
           /></a>
         </div>
         <div class="card">
           <p class="sub-title para">Pricing Table</p>
           <p class="sub-title">Basic pricing table</p>
-          <a href="https://jonee2.github.io/FEM-pricingTable/"
+          <a href="https://jhonneg.github.io/FEM-pricingTable/"
             ><img
               alt="pricingtable"
               src="images/Screenshot from 2024-02-25 03-28-11.png"
@@ -88,7 +88,7 @@
             Book library made in JS, you can add books, remove it and mark it as
             read
           </p>
-          <a href="https://jonee2.github.io/libraryJS/"
+          <a href="https://jhonneg.github.io/libraryJS/"
             ><img
               alt="loginform"
               src="images/Screenshot from 2024-03-22 19-42-15.png"
@@ -99,7 +99,7 @@
     <footer class="footer">
       <ul class="contactfooter">
         <li>
-          <a href="https://github.com/Jonee2"
+          <a href="https://github.com/jhonneg"
             ><img class="icons" alt="Github" src="images/image.png"
           /></a>
         </li>
