--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" type="image/x-icon" href="images/code-slash-svgrepo-com.svg">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
@@ -12,7 +13,6 @@
       <section class="header">
         <h1>I'm Jhonne</h1>
         <p class="typing sub-title para-black"></p>
-        <img src="images/code-slash-svgrepo-com.svg" alt="codebracket" />
       </section>
       <section class="header">
         <p class="para-black sub-title">About Me</p>
