added face app to port

--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="icon" type="image/x-icon" href="images/code-slash-svgrepo-com.svg">
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="images/code-slash-svgrepo-com.svg"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
@@ -32,6 +36,9 @@
         <p>HTML/CSS</p>
         <p>Tailwind</p>
         <p>Javascript</p>
+        <p>React</p>
+        <p>Node/Express</p>
+        <p>PostgreSQL</p>
         <p>Visual Studio Code</p>
       </section>
       <div class="header">
@@ -74,13 +81,14 @@
           /></a>
         </div>
         <div class="card">
-          <p class="sub-title para">Pricing Table</p>
-          <p class="sub-title">Basic pricing table</p>
-          <a href="https://jhonneg.github.io/FEM-pricingTable/"
-            ><img
-              alt="pricingtable"
-              src="images/Screenshot from 2024-02-25 03-28-11.png"
-          /></a>
+          <p class="sub-title para">Face Recognition App</p>
+          <p class="sub-title">Build with React, Node/Express and Postgres</p>
+          <a href="https://smartbrainjsx-1.onrender.com/">
+            <img
+              alt="faceappexample"
+              src="https://github.com/Jhonneg/SmartbrainJSX/blob/main/assets/Screenshot%20from%202024-04-15%2017-30-09.png?raw=true"
+            />
+          </a>
         </div>
         <div class="card">
           <p class="sub-title para">Library in JS</p>
