cleaned up, changed favcon

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="images/code-slash-svgrepo-com.svg"
+      href="assets/icons8-source-code-16.png"
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -52,7 +52,7 @@
             ><img
               class="lawgif"
               alt="lawfirm"
-              src="images/Screencast from 01-24-2024 10_11_32 AM.gif"
+              src="assets/Screencast from 01-24-2024 10_11_32 AM.gif"
           /></a>
         </div>
         <div class="card">
@@ -70,14 +70,14 @@
           <a href="https://jhonneg.github.io/rock-paper-scissor/"
             ><img
               alt="RPS"
-              src="images/Screencastfrom02-01-2024090133AM-ezgif.com-video-to-gif-converter.gif"
+              src="assets/Screencastfrom02-01-2024090133AM-ezgif.com-video-to-gif-converter.gif"
           /></a>
         </div>
         <div class="card">
           <p class="sub-title para">Calculator</p>
           <p class="sub-title">Calculator written in TS</p>
           <a href="https://jhonneg.github.io/JScalculator/"
-            ><img alt="RPS" src="images/ezgif-8-7272f74475.gif"
+            ><img alt="RPS" src="assets/ezgif-8-7272f74475.gif"
           /></a>
         </div>
         <div class="card">
@@ -99,7 +99,7 @@
           <a href="https://jhonneg.github.io/libraryJS/"
             ><img
               alt="loginform"
-              src="images/Screenshot from 2024-03-22 19-42-15.png"
+              src="assets/Screenshot from 2024-03-22 19-42-15.png"
           /></a>
         </div>
       </section>
@@ -108,7 +108,7 @@
       <ul class="contactfooter">
         <li>
           <a href="https://github.com/jhonneg"
-            ><img class="icons" alt="Github" src="images/image.png"
+            ><img class="icons" alt="Github" src="assets/image.png"
           /></a>
         </li>
       </ul>
