changed smart brain example img

--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
         <div class="card">
           <p class="sub-title para">Face Recognition App</p>
           <p class="sub-title">Build with React, Node/Express and Postgres</p>
-          <a href="https://smartbrainjsx-1.onrender.com/">
+          <a href="https://smart-brian.netlify.app/">
             <img
               alt="faceappexample"
-              src="https://github.com/Jhonneg/SmartbrainJSX/blob/main/assets/Screenshot%20from%202024-04-15%2017-30-09.png?raw=true"
+              src="https://github.com/Jhonneg/SmartbrainJSX/raw/main/assets/Screenshot%20from%202024-05-04%2008-08-01.png"
             />
           </a>
         </div>
