--- a/index.html
+++ b/index.html
@@ -75,16 +75,16 @@
           /></a>
         </div>
         <div class="card">
-          <p class="sub-title para">Calculator</p>
-          <p class="sub-title">Calculator written in TS</p>
-          <a href="https://jhonneg.github.io/JScalculator/"
-            ><img alt="RPS" src="assets/ezgif-8-7272f74475.gif"
+          <p class="sub-title para">Discord weather bot</p>
+          <p class="sub-title">Discord weather bot built with DiscordJS</p>
+          <a href="https://github.com/Jhonneg/DiscordJS"
+            ><img alt="discordbot" src="assets/Screencast from 05-13-2024 11_50_34 AM.gif"
           /></a>
         </div>
         <div class="card">
           <p class="sub-title para">Face Recognition App</p>
           <p class="sub-title">Build with React, Node/Express and Postgres</p>
-          <a href="https://smart-brian.netlify.app/">
+          <a href="https://smartbrian.netlify.app/">
             <img
               alt="faceappexample"
               src="https://github.com/Jhonneg/SmartbrainJSX/raw/main/assets/Screenshot%20from%202024-05-04%2008-08-01.png"
