fixed anchor pong link

--- a/index.html
+++ b/index.html
@@ -57,11 +57,13 @@
           /></a>
         </div>
         <div class="card">
-          <p class="sub-title para">Breakout game</p>
-          <p class="sub-title">Breakout Game in canvas</p>
-          <button id="canvasbtn">Start the game</button>
-          <canvas id="myCanvas" width="480" height="320"> </canvas>
-          <p class="sub-title">Use arrows to move the paddle</p>
+          <p class="sub-title para">Multiplayer Pong</p>
+          <p class="sub-title">
+            Multiplayer Pong game build with Node/Express and Socket.io
+          </p>
+          <a href="https://pongjs-production.up.railway.app/">
+            <img alt="pong demo" src="/assets/Kazam_screencast_00000 (1).gif" />
+          </a>
         </div>
         <div class="card">
           <p class="sub-title para">Rock Paper Scissor Game.</p>
@@ -78,7 +80,9 @@
           <p class="sub-title para">Discord weather bot</p>
           <p class="sub-title">Discord weather bot built with DiscordJS</p>
           <a href="https://github.com/Jhonneg/DiscordJS"
-            ><img alt="discordbot" src="assets/Screencast from 05-13-2024 11_50_34 AM.gif"
+            ><img
+              alt="discordbot"
+              src="assets/Screencast from 05-13-2024 11_50_34 AM.gif"
           /></a>
         </div>
         <div class="card">
