--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
       </section>
       <section class="header-black-tilted">
         <h1 class="sub-title">Tech Stack</h1>
-        <p>HTML/CSS</p>
-        <p>Tailwind</p>
-        <p>Javascript</p>
-        <p>React</p>
-        <p>Node/Express</p>
-        <p>PostgreSQL</p>
-        <p>Visual Studio Code</p>
+        <b>HTML/CSS</b>
+        <b>Tailwind</b>
+        <b>Javascript</b>
+        <b>React</b>
+        <b>Node/Express</b>
+        <b>PostgreSQL</b>
+        <b>Visual Studio Code</b>
       </section>
       <div class="header">
         <p class="main-title">Projetos</p>
