--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <script defer src="script.ts"></script>
+    <script type="module" defer src="script.ts"></script>
   </head>
   <body>
     <main>
