--- a/index.html
+++ b/index.html
@@ -110,13 +110,24 @@
       </section>
     </main>
     <footer class="footer">
-      <ul class="contactfooter">
-        <li>
-          <a href="https://github.com/jhonneg"
-            ><img class="icons" alt="Github" src="assets/image.png"
-          /></a>
-        </li>
-      </ul>
+      <div>
+        <b>Build with</b>
+        <img
+          width="48"
+          height="48"
+          src="https://img.icons8.com/color/48/typescript.png"
+          alt="typescript"
+        />
+        <img
+          width="48"
+          height="48"
+          src="https://img.icons8.com/color/48/sass-avatar.png"
+          alt="sass-avatar"
+        />
+      </div>
+      <a href="https://github.com/jhonneg"
+        ><img class="icons" alt="Github" src="assets/image.png"
+      /></a>
     </footer>
   </body>
 </html>
