--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             ><img
               class="lawgif"
               alt="lawfirm"
-              src="assets/Screencast from 01-24-2024 10_11_32 AM.gif"
+              src="assets/Screenshot from 2024-02-01 10-50-31.png"
           /></a>
         </div>
         <div class="card">
@@ -62,7 +62,15 @@
             Multiplayer Pong game build with Node/Express and Socket.io
           </p>
           <a href="https://pongjs-production.up.railway.app/">
-            <img alt="pong demo" src="/assets/Kazam_screencast_00000 (1).gif" />
+            <video
+              controls
+              type="video/mp4"
+              autoplay
+              width="500"
+              height="300"
+              name="pong"
+              src="https://github.com/Jhonneg/PongJS/assets/94491571/733b62cc-e616-4380-9c98-c13c5e75b717"
+            ></video>
           </a>
         </div>
         <div class="card">
