--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
           </p>
           <a href="https://pongjs-production.up.railway.app/">
             <video
-              controls
               type="video/mp4"
               autoplay
+              muted
               width="500"
               height="300"
               name="pong"
